refactor v3